Css tweak to prevent overflow in pre tags
git-svn-id: http://junebug.rubyforge.org/svn/wiki/trunk@87 6cb1f131-7020-0410-9d7d-f19630c53dbb

--- a/deploy/public/style/base.css
+++ b/deploy/public/style/base.css
@@ -270,6 +270,7 @@ body {
     border: 1px solid #ddd;
     padding: 8px 20px;
     margin: 15px 0px;
+    overflow: auto;
 }
 
 .content pre.clean {
